--- a/eaton.frontend/src/styles/_config/variables/_variables-locale.scss
+++ b/eaton.frontend/src/styles/_config/variables/_variables-locale.scss
@@ -1,22 +1,45 @@
 // Locale / Languages
+// Mapping of locale specific properties based on languages that can be accessed
+// via the get-locale function. These are the default values used.
 //--------------
-$font-en: (
-  font__primary: Arial,
-  font__secondary: Eaton,
-  h1: (
-    font: '',
-    desktop: 'xx',
-    tablet: 'xx',
-    mobile: 'xx'
-  )
+
+$locales: (
+    en: (
+        font__primary: Eaton,
+        font__secondary: Arial,
+        h1: (
+          font: '',
+          desktop: 'xx',
+          tablet: 'xx',
+          mobile: 'xx'
+        )
+    ),
+    jp: (
+        font__primary: 'Kozuka Gothic Pro',
+        font__secondary: Eaton
+    ),
+    cn: (
+        font__primary: 'Heiti SC Medium',
+        font__secondary: Eaton
+    ),
+    kr: (
+        font__primary: 'HeadLineA',
+        font__secondary: Eaton
+    ),
+    marathi: (
+        font__primary: 'Kruti Dev',
+        font__secondary: Eaton
+    ),
+    thai: (
+        font__primary: 'Cordia DSE',
+        font__secondary: Eaton
+    )
 );
 
-$font-jp: (
-  font__primary: 'Kozuka Pro',
-  font__secondary: Eaton
-);
-
-$font-marathi: (
-  font__primary: 'Kruti Dev',
-  font__secondary: Eaton
-);
+/**
+ Getter for retrieving Font Families
+ @param {String} $locale Locale Value to retrieve properties for
+*/
+@function get-locale-font($locale : 'en') {
+    @return map-deep-get($locales, $locale, 'font__primary');
+}
