Link Basic Styles + Locale config map - Cont’d

--- a/eaton.frontend/src/styles/_config/variables/_variables-locale.scss
+++ b/eaton.frontend/src/styles/_config/variables/_variables-locale.scss
@@ -8,10 +8,16 @@ $locales: (
         font__primary: Eaton,
         font__secondary: Arial,
         h1: (
-          font: '',
-          desktop: 'xx',
+          font: 'Eaton Medium',
+          desktop: (
+              font-size: '',
+              line-height: '',
+          ),
           tablet: 'xx',
-          mobile: 'xx'
+          mobile: (
+              font-size: '',
+              line-height: '',
+          )
         )
     ),
     jp: (
