--- a/eaton.frontend/src/styles/base/_typography.scss
+++ b/eaton.frontend/src/styles/base/_typography.scss
@@ -30,8 +30,9 @@ body {
 }
 
 // Body Link
-// Used with Body Copy & Body Small Links for link styles
-// <a href="#" class="body-link body-small-link">...</a>
+// Used with various typography elements  for link styles
+// Eg: <a href="#" class="body-link body-small-link">...</a>
+// Eg: <a href="#" class="body-link heading-h5">...</a>
 //---------------------
 
 .body-link {
