Adding Views funcionality to component.

--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-tryout-component/clientlib/css/tryout-component.css
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-tryout-component/clientlib/css/tryout-component.css
@@ -6,3 +6,11 @@ p {
     padding: 10px 0;
     color: palevioletred;
 }
+
+.lightview {
+    background-color: floralwhite;
+}
+
+.darkview {
+    background-color: gainsboro;
+}
