Add ‘color’ prefix to all SASS Color variables

--- a/eaton.frontend/src/styles/_config/variables/_variables-colors.scss
+++ b/eaton.frontend/src/styles/_config/variables/_variables-colors.scss
@@ -3,25 +3,26 @@
 // Some color names are simplified to match the Toolkit
 //--------------
 
-$eaton-blue:        #005EB8;
+$color__primary-blue:      #005EB8;
 
 // Primary Grays
-$primary-gray1:     #333F48;  //Gray1
-$primary-gray2:     #5B6770;  //Gray2
-$primary-gray3:     #98A4AE;  //Gray3
+$color__primary-gray1:     #333F48;  //Gray1
+$color__primary-gray2:     #5B6770;  //Gray2
+$color__primary-gray3:     #98A4AE;  //Gray3
 
-//Secondary Grays
-$secondary-gray1:    #CCD2D7;  //Gray5
-$secondary-gray2:    #EEF0F2;  //Gray6
-$secondary-gray3:    #F8F8F8;  //Gray7
+// Secondary Grays
+$color__secondary-gray1:    #CCD2D7;  //Gray5
+$color__secondary-gray2:    #EEF0F2;  //Gray6
+$color__secondary-gray3:    #F8F8F8;  //Gray7
 
-//Accent Colors
-$accent-darkblue:    #003865;  //Dark Blue
-$accent-aqua:        #00B2A9;  //Aqua
-$accent-orange:      #ED8B00;  //Orange
+// Accent Colors
+$color__accent-darkblue:    #003865;  //Dark Blue
+$color__accent-aqua:        #00B2A9;  //Aqua
+$color__accent-orange:      #ED8B00;  //Orange
 
-//System colors
-$black:              #000000;
-$white:              #FFFFFF;
-$green:              #4C8C2B;
-$red:                #9D2235;
+// System colors
+$color__black:              #000000;
+$color__white:              #FFFFFF;
+$color__green:              #4C8C2B;
+$color__red:                #9D2235;
+
