--- a/eaton.frontend/src/global/css/_config/variables/_variables-colors.scss
+++ b/eaton.frontend/src/global/css/_config/variables/_variables-colors.scss
@@ -3,7 +3,7 @@
 // Some color names are simplified to match the Toolkit
 //--------------
 
-$color__primary-blue:      #005EB8;
+$color__primary-blue:      #005EB8;  // Eaton-Blue
 
 // Primary Grays
 $color__primary-gray1:     #333F48;  //Gray1
@@ -16,7 +16,7 @@ $color__secondary-gray2:    #EEF0F2;  //Gray6
 $color__secondary-gray3:    #F8F8F8;  //Gray7
 
 // Accent Colors
-$color__accent-darkblue:    #003865;  //Dark Blue
+$color__accent-darkblue:    #003865;  //Dark-Blue
 $color__accent-aqua:        #00B2A9;  //Aqua
 $color__accent-orange:      #ED8B00;  //Orange
 
@@ -25,4 +25,3 @@ $color__black:              #000000;
 $color__white:              #FFFFFF;
 $color__green:              #4C8C2B;
 $color__red:                #9D2235;
-
