--- a/eaton.frontend/src/global/css/_config/variables/_variables-colors.scss
+++ b/eaton.frontend/src/global/css/_config/variables/_variables-colors.scss
@@ -21,7 +21,7 @@ $color__accent-aqua:        #00B2A9;  //Aqua
 $color__accent-orange:      #ED8B00;  //Orange
 
 // System colors
-$color__black:              #000000;
-$color__white:              #FFFFFF;
+$color__black:              #000;
+$color__white:              #FFF;
 $color__green:              #4C8C2B;
 $color__red:                #9D2235;
