--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/drawer.html
@@ -1,8 +1,8 @@
 <style>
   .country-selector--drawer {
-      height: 200px;
+      height: 240px;
       background: #98A4AE;
-      border: 1px solid #4C8C2B;
+      border: 1px solid #005EB8;
       padding: 30px 20px;
       color: white;
   }
