--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/drawer.html
@@ -1,12 +1,4 @@
-<style>
-  .country-selector--drawer {
-      height: 240px;
-      background: #98A4AE;
-      border: 1px solid #005EB8;
-      padding: 30px 20px;
-      color: white;
-  }
-</style>
+<!-- Moved the css to \etc\designs\eaton-static\clientlib-static\components\country-selector -->
 
 <!-- Country Selector: Drawer -->
 <div class="country-selector--drawer">
