scss and js files moved to ui.static // some code tweeks

--- a/eaton.frontend/src/global/css/_config/variables/_variables-base.scss
+++ b/eaton.frontend/src/global/css/_config/variables/_variables-base.scss
@@ -19,6 +19,12 @@ $grid__lg-container: 1140px;
 $grid__columns: 12;
 $grid__gutter-width: 30px;
 
+// Spacing
+//--------------
+$spacing__sm: 30px;
+$spacing__md: 60px;
+$spacing__lg: 90px;
+$spacing__xl: 120px
 
 // Typography
 //--------------
