--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/drawer.html
@@ -5,7 +5,7 @@
     <div class="container-fixed container-padding">
         <div class="row">
             <div class="col-xs-12">
-                Country Selector -- Drawer View
+                Country Selector -- Sync with AEM
             </div>
         </div>
     </div>
