--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/default.html
@@ -1,21 +1,25 @@
+<!--div data-sly-use.ttil="js/title-text-image-link-data.js">
+    <h1>${ttil.title}</h1>
+    <p>${ttil.text}</p>
+</div-->
 <div class="list-default container-fluid">
 
-    <div class="row hidden-xs card-container--topmargin">
+    <div class="row hidden-xs visible-sm visible-md visible-lg card-container--topmargin">
         <div class="col-sm-10 col-sm-offset-1 col-md-5 equal-height-row">
             <div class="related-category--tablet-left">
-                <img src="content/dam/eaton/images/Jet.png" class="img-responsive category__image" />
+                <img src="/content/dam/eaton/images/card1desktop.png" class="img-responsive category__image"/>
             </div>
             <div class="category__item--border category__item-innerpadding related-category--tablet-right category__item">
                 <div class="related-category__title--font category__title--bottompadding">Healthcare</div>
                 <div>
-                    <a class="category__link--font" href="#">Emergency power system basics: Maintaining...</a>
+                    <a class="category__link--font" href="#">Emergency power system basics: Maintaining Maintaining</a>
                 </div>
             </div>
         </div>
 
         <div class="col-sm-10 col-sm-offset-1 col-md-5 col-md-offset-0 equal-height-row">
             <div class="related-category--tablet-left">
-                <img src="content/dam/eaton/images/Power_Lines.png" class="img-responsive category__image" />
+                <img src="/content/dam/eaton/images/card2desktop.png" class="img-responsive category__image"/>
             </div>
             <div class="category__item--border category__item-innerpadding related-category--tablet-right category__item">
                 <div class="related-category__title--font category__title--bottompadding">Knowledge Center</div>
@@ -31,7 +35,7 @@
             <div id="myCarousel" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="content/dam/eaton/images/Jet.png" class="img-responsive category__image" />
+                        <img src="/content/dam/eaton/images/card1mobile.png" class="img-responsive category__image" />
                         <div class="category__item--border category__item-innerpadding carousel__item">
                             <div class="related-category__title--font category__title--bottompadding">Data Center Facility UPS</div>
                             <h5>
@@ -41,7 +45,7 @@
                     </div>
                     
                     <div class="item">
-                        <img src="content/dam/eaton/images/Power_Lines.png" class="img-responsive category__image" />
+                        <img src="/content/dam/eaton/images/card2mobile.png" class="img-responsive category__image" />
                         <div class="category__item--border category__item-innerpadding carousel__item">
                             <div class="related-category__title--font category__title--bottompadding">Electrical</div>
                             <h5>
