--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/l2-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/l2-hero.html
@@ -1,8 +1,8 @@
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid header__image vertical-align">
+    <div class="row  text-center center-block">
         <div class="col-xs-12">
-            <div class="header__image vertical-align">
-                <div class="text-center center-block">
+            <div class="">
+                <div class="">
                     <h1 class="header--font-color">Eaton UPS At work</h1>
                     <div class="header--font-color">Discover why more companies are switching to eaton UPS.</div>
                 </div>
