Manage Tabbing Order - Initial + Visibility of nested links

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/primary-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/primary-navigation.html
@@ -21,6 +21,7 @@
                 width: 100%;
                 left: 0;
                 height: 0;
+                visibility: hidden;
                 overflow: hidden;
                 background: #5B6770; /* Gray 2 */
                 color: white;
@@ -28,6 +29,7 @@
             }
             .nav-open .eaton-link-list--primary-navigation {
                 height: 100%;
+                visibility: visible;
                 overflow: auto;
             }
 
