--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/primary-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/primary-navigation.html
@@ -1,11 +1,11 @@
 <template data-sly-template.primaryNavigation="${ @ data }">
-    <div class="eaton-link-list eaton-link-list--primary-navigation">
+    <div class="eaton-link-list eaton-link-list--primary-navigation ${data.backgroundImage ? 'eaton-link-list--has-background' : ''} ">
 
       <!--/* Headline: Visible only for Mobile Breakpoints */-->
       <p data-sly-test="${data.headline}" class="eaton-link-list__headline">${data.headline}</p>
 
       <!--/* List Links */-->
-      <nav data-sly-list.level1="${data.links}" class="eaton-link-list__items">
+      <nav data-sly-list.level1="${data.links}" class="eaton-link-list__items" style="background-image: url('${data.backgroundImage @ context = 'uri'}')">
           <a href="#" data-menu-category="${level1.menuCategory}" aria-expanded="false">${ level1.title }</a>
       </nav>
     </div>
@@ -27,6 +27,19 @@
                 color: white;
                 transition: height 0.7s ease-in-out;
             }
+            .eaton-link-list__items {
+                height: 100%;
+                width: 100%;
+            }
+            .eaton-link-list--has-background .eaton-link-list__items {
+                background-repeat: no-repeat;
+                background-position: center center;
+                -webkit-background-size: cover;
+                -moz-background-size: cover;
+                -o-background-size: cover;
+                background-size: cover;
+            }
+
             .nav-open .eaton-link-list--primary-navigation {
                 height: 100%;
                 visibility: visible;
@@ -41,6 +54,7 @@
                 line-height: 50px;
                 color: white;
                 background: #333F48; /* Gray 1 */
+                margin-bottom: 0;
             }
         }
 
@@ -48,6 +62,10 @@
             .eaton-link-list--primary-navigation {
                 position: relative;
                 text-align: right;
+            }
+
+            .eaton-link-list--has-background .eaton-link-list__items {
+                background: none !important;
             }
 
             /* Headline */
