Link List - Fixed position styles

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/primary-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/primary-navigation.html
@@ -30,6 +30,17 @@
             .eaton-link-list__items {
                 height: 100%;
                 width: 100%;
+                padding: 30px;
+            }
+            .eaton-link-list__items a {
+                display: block;
+                margin: 30px 0;
+                padding: 30px 0;
+                color: white;
+                border: 1px solid red;
+            }
+            .eaton-link-list__items a:first-child {
+                margin-top: 0;
             }
             .eaton-link-list--has-background .eaton-link-list__items {
                 background-repeat: no-repeat;
@@ -49,7 +60,7 @@
             /* Headline */
             .eaton-link-list--primary-navigation .eaton-link-list__headline {
                 display: block;
-                padding: 60px 0;
+                padding: 60px 30px;
                 font-size: 40px;
                 line-height: 50px;
                 color: white;
