--- a/eaton.frontend/src/global/css/_config/variables/_variables-base.scss
+++ b/eaton.frontend/src/global/css/_config/variables/_variables-base.scss
@@ -24,7 +24,7 @@ $grid__gutter-width: 30px;
 $spacing__sm: 30px;
 $spacing__md: 60px;
 $spacing__lg: 90px;
-$spacing__xl: 120px
+$spacing__xl: 120px;
 
 // Typography
 //--------------
