Minor: TODO comments

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/primary-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/primary-navigation.html
@@ -5,6 +5,7 @@
       <p data-sly-test="${data.headline}" class="eaton-link-list__headline">${data.headline}</p>
 
       <!--/* List Links */-->
+      <!--/* TODO: BgImg + Markup Structure */-->
       <nav data-sly-list.level1="${data.links}" class="eaton-link-list__items" style="background-image: url('${data.backgroundImage @ context = 'uri'}')">
           <a href="#" data-menu-category="${level1.menuCategory}" aria-expanded="false">${ level1.title }</a>
       </nav>
