[PL-Env] Creating “a-demo-component” for testing purposes

--- a/eaton.frontend/src/components/a-demo-component/css/a-demo-component.scss
+++ b/eaton.frontend/src/components/a-demo-component/css/a-demo-component.scss
@@ -1,11 +1,12 @@
 //-----------------------------------
-// Component M-22: Quote
+// Component: Example Component
 //-----------------------------------
 
 // Import All SASS config files (Variables, Mixins, Functions, Extends etc...)
 @import "../../../global/css/_config/sass";
 
-.eaton-example-quote {
+
+.a-demo-component {
 
   background-color: $color__primary-gray1;
 
