--- a/eaton.frontend/src/components/social-links/css/social-links.scss
+++ b/eaton.frontend/src/components/social-links/css/social-links.scss
@@ -1,10 +1,20 @@
 //-----------------------------------
-// Component Link List
+// Component Social Links
 //-----------------------------------
 
 // Import All SASS config files (Variables, Mixins, Functions, Extends etc...)
 @import "../../../global/css/_config/sass";
 
-// Import SubViews
-@import "views/view-vertical";
-@import "views/view-horizontal";
+.eaton-social-links {
+
+  &__list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  &__list-item {
+    display: inline-block;
+  }
+
+}
