--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-horizontal.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-horizontal.html
@@ -2,6 +2,24 @@
 
   <div class="eaton-link-list-horizontal">
 
+    <!--/* If Eyebrow */-->
+    <sly data-sly-test="${ data.view.eyebrow }">
+      <h4 class="eaton-link-list-horizontal__eyebrow">${ data.view.eyebrow }</h4>
+    </sly>
+
+    <!--/* List Links */-->
+    <ul
+      data-sly-list="${ data.view.links }"
+      class="eaton-link-list-horizontal__list"
+    >
+      <li class="eaton-link-list-horizontal__list-item">
+        <a href="${ item.url }"
+          aria-label="Go to ${ item.title }"
+          class="eaton-link-list-horizontal__list-link"
+          target="${ item.target }"
+        >${ item.title }</a>
+      </li>
+    </ul>
 
   </div>
 
