--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-featured-story.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-featured-story.html
@@ -3,8 +3,8 @@
         <div class="row featured-story-component__row">
             <div class="col-xs-12 col-lg-11 ${componentList.odd ? 'col-lg-pull-0' : 'col-lg-offset-1'}">
                 <div class="featured-story-component__image">
-                    <img class="img-responsive show-desktop" src="${component.image}" />
-                    <img class="img-responsive show-mobile" src="${component.mobile_image}" />
+                    <img class="img-responsive hidden-xs" src="${component.image}" />
+                    <img class="img-responsive visible-xs" src="${component.mobile_image}" />
                 </div>
                 <div class="col-xs-12 col-md-5 col-lg-4 ${componentList.odd ? 'featured-story-component--right' : 'featured-story-component--left'}">
                     <div class="featured-story-component__content">
