--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
@@ -1,9 +1,9 @@
-<div data-sly-use.data="../data/view-landing-hero-multiple-data.js" id="carousel-example-generic" class="carousel-component carousel slide" data-ride="carousel" data-pause="hover">
+<div data-sly-use.data="../data/view-landing-hero-multiple-data.js" class="carousel-component carousel slide" data-ride="carousel" data-pause="hover">
     <!-- Indicators -->
     <ol class="carousel-indicators" data-sly-list.slide="${data}">
-        <li data-target="#carousel-example-generic" data-slide-to="${slideList.index}" class="carousel-indicators__item ${slideList.index == 0 ? 'active' : ''}"></li>
+        <li data-target=".carousel-component" data-slide-to="${slideList.index}" class="carousel-indicators__item ${slideList.index == 0 ? 'active' : ''}"></li>
     </ol>
-    <div class="carousel-component__down-arrow show-mobile">
+    <div class="carousel-component__down-arrow visible-xs">
         <span class="glyphicon glyphicon-menu-down"></span>
     </div>
 
@@ -19,11 +19,11 @@
             </div>
         </div>
         <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev" data-sly-test="${slideList.count > 1}">
+        <a class="left carousel-control" href=".carousel-component" role="button" data-slide="prev" data-sly-test="${slideList.count > 1}">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next" data-sly-test="${slideList.count > 1}">
+        <a class="right carousel-control" href=".carousel-component" role="button" data-slide="next" data-sly-test="${slideList.count > 1}">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
