[M-11] page overview sass coding

--- a/eaton.frontend/src/components/title-text-image-link-list/css/title-text-image-link-list.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/title-text-image-link-list.scss
@@ -8,3 +8,4 @@
 // Import SubViews
 @import 'views/view-landing-hero';
 @import 'views/view-featured-story';
+@import "views/view-product-overview";
