--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -46,3 +46,5 @@
   .featured-story-component__row { padding-bottom: 20px; }
   .show-desktop { display: none; }
   .show-mobile { display: block; } }
+
+.eaton-product-overview h1, .eaton-product-overview h2, .eaton-product-overview h3 { color: yellow; background-color: grey; }
