--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -1,3 +1,17 @@
-.eaton-header__primary-nav { background: #FFF; }
+.header-utility-nav { background: #005EB8; padding: 10px 0; }
 
-.eaton-header__utility-nav { margin: 0; }
+.header-utility-nav__country { text-transform: uppercase; }
+
+.header-utility-nav__sign-in { text-align: right; }
+
+.header-utility-nav .open-country-selector, .header-utility-nav .open-sign-in { color: #FFF; }
+
+@media screen and (max-width: 767px) { .header-utility-nav { position: fixed; bottom: 0; z-index: 1; width: 100%; right: 0; opacity: 0; visibility: hidden; transition: opacity 0.5s ease-in-out; }
+  .nav-open .header-utility-nav { opacity: 1; visibility: visible; } }
+
+.header-primary-nav { height: 100px; background: #FFF; padding: 20px 0; transition: height 0.3s ease-in-out; }
+
+@media screen and (min-width: 992px) { .eaton-header--fixed { position: fixed; width: 100%; }
+  .eaton-header--fixed .full-page-drawer, .eaton-header--fixed .header-utility-nav { display: none; }
+  .eaton-header--fixed .header-primary-nav { height: 80px; }
+  .eaton-header--fixed .eaton-logo__link { width: 126px; height: 40px; transition: height 0.3s ease-in-out, width 0.3s ease-in-out; } }
