Primary Navigation: Converting Inline Styles —> SASS + converting views as blocks vs modifiers

--- a/eaton.frontend/src/components/header/css/_header-utility-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-utility-nav.scss
@@ -23,7 +23,7 @@
   // Mobile Breakpoints
   // ----------------------------
 
-  @include media-mobile-only {
+  @include media-mobile-and-tablet {
     position: fixed;
     bottom: 0;
     z-index: 1;
