--- a/eaton.frontend/src/components/header/css/_header-primary-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-primary-nav.scss
@@ -3,10 +3,12 @@
 //------------------------------------------
 
 $desktop-height: 100px;
+$primary-nav-border: #eef0f2;
 
 .header-primary-nav {
   height: $desktop-height;
   background: $color__white;
   padding: 20px 0;
+  border-bottom: 4px solid $primary-nav-border;
   transition: height 0.3s ease-in-out;
 }
