--- a/eaton.frontend/src/components/header/css/_header-utility-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-utility-nav.scss
@@ -17,6 +17,7 @@
   .open-country-selector,
   .open-sign-in {
     color: $color__white;
+    text-decoration: none;
   }
 
   //-----------------------------
